--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ djangorestframework==3.16.0
 django-cors-headers==4.7.0
 channels==4.2.2
 channels-redis==4.2.1
-mysqlclient==2.2.7
+psycopg2-binary==2.9.9
 redis==6.1.0
-daphne==4.1.0 
+daphne==4.1.0
+dj-database-url==2.1.0 
